Stackless-Python News
+++++++++++++++++++++

This file documents changes to the Stackless extension of C-Python.
For other changes see Misc/NEWS.


What's New in Stackless 3.X.X?
==============================

*Release date: 20XX-XX-XX*

- https://bitbucket.org/stackless-dev/stackless/issue/77
  Fix a NULL pointer exception, if a call to stackless.tasklet() fails
  (i.e. called with invalid arguments).


What's New in Stackless 3.3.6?
==============================

*Release date: 2015-02-14*

- Windows installer: update openssl to version 1.0.1l.

- Windows installer: update tcl and tk to version 8.5.15.0 
  and tix to version 8.4.3.5. Python 2.7.9 uses the same versions.

- https://bitbucket.org/stackless-dev/stackless/issue/60
  Fix a crash

- https://bitbucket.org/stackless-dev/stackless/issue/71
  Fix a regression in Lib/pickle.py. Pickling functions
  didn't work any longer.

- Fix for test_watchdog_on_tasklet_hard due to re !!!. The caching behaviour
  of re.py was changed in debug mode, which influenced the number of opcodes
  spent in our test.

- Fix compiler warnings found on MAC.

- https://bitbucket.org/stackless-dev/stackless/issue/61
  Fix a crash after unpickling hard switched tasklet. It is now
  always possible to inspect the local variables (frame.f_locals)
  of an unpickled frame object.


What's New in Stackless 3.3.5?
==============================

*Release date: 2014-03-11*

- Fix channel and tasklet initialization.  Initialization is now done
  using __init__ methods.
  Tasklet.__new__() now just binds the tasklet to the calling thread and
  ignores extra arguments.
  The tasklet.__init__() now works like tasklet.bind.
  Channel.__new__() now ignores extra arguments.
  These changes make subclassing taskelets and channels less confusing.

- https://bitbucket.org/stackless-dev/stackless/commits/26a53cfeeeffeaacb55
  Make stackless.run() more flexible.  It can now be called by any tasklet.